[package]
name = "strif"
version = "0.1.0"
edition = "2021"
description = "A tool to identify interruptions in short tandem repeats across the genome"
repository = "https://github.com/rashidalabri/strif"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
