[package]
name = "strif"
version = "0.2.1"
edition = "2021"
description = "A tool to identify interruptions in short tandem repeats across the genome"
repository = "https://github.com/rashidalabri/strif"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
rust-htslib = { version = "0.43.1", default-features = false }
regex = "1"
lazy_static = "1.4.0"
log = "0.4.19"
anyhow = "1.0.71"
stderrlog = "0.5.4"
csv = "1.2.1"
serde_json = "1.0"
bio = "1.1.0"